<resources>
    <string name="app_name">Zombienomicon</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="name_to_search">Name to Search</string>
    <string name="id_to_search">Id to Search</string>
    <string name="date_to_search">Date to Search</string>
    <string name="select_search">Select a Search Option</string>
    <string name="list_empty">No zombies found!</string>
    <string name="detection_date">"Detection Date: "</string>
    <string name="detection_location">"Detection Location: "</string>
    <string name="id">"Id: "</string>
    <string name="name">"Name: "</string>
    <string name="termination_date">"Termination Date: "</string>
    <string name="dead">Dead</string>
    <string name="female">Female</string>
    <string name="undead">Undead</string>
    <string name="undefined">Undefined</string>
    <string name="edit">Edit</string>
    <string name="delete_zombie">Delete Zombie</string>
    <string name="confirm_delete_zombie">Are you sure you want to delete this zombie?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_zombie">Edit Zombie</string>
    <string name="confirm_edit_zombie">Are you sure you want to edit this zombie?</string>
    <string name="add_zombie">Add Zombie</string>
    <string name="confirm_add_zombie">Are you sure you want to add this zombie?</string>
    <string name="invalid_id">Invalid Id</string>
    <string name="all">All</string>
    <string name="state">"State: "</string>
    <string name="gender">"Gender: "</string>
    <string name="no_date_yet">No date yet!</string>
    <string name="set_detection_date">Set Detection Date</string>
    <string name="set_termination_date">Set Termination Date</string>
    <string name="empty_fields">All fields must be filled</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="write_error">Could not write Zombienomicon to internal storage</string>
    <string name="read_error">Error reading Zombienomicon from internal storage</string>
    <string name="no_file_error">Could not read Zombienomicon from internal storage (no Zombienomicon yet?)</string>
    <string name="empty_name">Name field must be filled</string>
    <string name="id_9_digit">Id must have 9 digits</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="empty_id">Id field must be filled</string>
    <string name="empty_date">Date field must be filled</string>
    <string name="id_already_exists">Id already exists!</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="ok">OK</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The application will now exit.</string>
    <string name="waiting_start">Waiting for Start!</string>
    <string name="exterminate">Exterminate</string>
    <string name="id_received">Id received!</string>
    <string name="read_from_network">Read from network</string>
    <string name="receive_id">Receive Info</string>
    <string name="button_zvk_start">Start ZVK Test</string>
    <string name="subject_human">The subject is human!</string>
    <string name="you_died">You died!</string>
    <string name="zombie_died">The Zombie died!</string>
    <string name="movement_detected">Movement detected! Scan subject!</string>
    <string name="subject_search">Searching for subject!</string>
    <string name="receive_id_wait">Waiting to receive Info…</string>
    <string name="subject_scan">Scanning the subject!</string>
    <string name="time_left">"Time Left: "</string>
    <string name="selected__weapon">Selected Weapon</string>
    <string name="select_rolling_pin">Select Rolling Pin</string>
    <string name="select_whip">Select Whip</string>
    <string name="select_fist">Select Fist</string>
    <string name="select_revolver">Select Revolver</string>
    <string name="select_lightsaber">Select Light Saber</string>
    <string name="select_sword">Select Sword</string>
    <string name="start">Start</string>
    <string name="testing_subject">Testing the subject!</string>
    <string name="choose_weapon">Choose your weapon!</string>
    <string name="start_test">Start test!</string>
    <string name="subject_lost">Subject lost!</string>
    <string name="failed_retire">Failed to retire subject</string>
    <string name="no_weapon">No weapon is selected!</string>
    <string name="accuracy_change">accuracy changed to</string>
    <string name="camera_permission">Camera permission</string>
    <string name="bluetooth_not_available">Bluetooth is not available.</string>
    <string name="bluetooth_not_enabled">Bluetooth is not enabled.</string>
    <string name="living_rise">The living shall rise!</string>
    <string name="dead_rise">The dead shall rise!</string>
    <string name="unnamed_zombie">Unnamed Zombie</string>
    <string name="unknown_location">Unknown</string>
    <string name="error_last_location">ERROR: unable to get last location.</string>
    <string name="google_api_suspended">Google API Client connection suspended.</string>
    <string name="google_api_failed">Google API Client connection failed.</string>
    <string name="location_read">Location read.</string>
    <string name="error_location">ERROR: unable to get address from location.</string>
    <string name="error_restart_test">ERROR: couldn\'t receive information. Please restart the test!</string>
    <string name="info_source">Information source</string>
    <string name="bt_or_qr">Bluetooth or QR Code?</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="qr_code">QR Code</string>
    <string name="zvk_test">ZVK Test</string>
    <string name="zvk_test_msg">Do you want to do the ZVK test?</string>
    <string name="error_network">ERROR: no network connection.</string>
    <string name="config_url">Configure URL</string>
    <string name="config_url_msg">Write URL link in the box below:</string>
    <string name="error_url_invalid">ERROR: unable to retrieve web page. URL may be invalid.</string>
    <string name="zombies_loaded">Zombie loaded from network resource!</string>
    <string name="male">Male</string>
</resources>
