<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_zombie_background">

    <LinearLayout
        android:id="@+id/ID_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_addId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="9"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <Button
        android:id="@+id/button_Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="button_AddOnClick"
        android:text="@string/add" />

    <LinearLayout
        android:id="@+id/Name_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ID_Layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_addName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Name_Layout"
        android:layout_centerInParent="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.27"
            android:text="@string/state"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton_Undead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:text="@string/undead" />

        <RadioButton
            android:id="@+id/radioButton_Dead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:text="@string/dead" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/DetectionDate_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup_gender"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_DetectionDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_date_yet"
            android:textSize="20sp" />

        <Button
            android:id="@+id/DateDetectionButton"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:onClick="DateDetectionOnClick"
            android:text="@string/set_detection_date" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/TerminationDate_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DetectionLocation_Layout"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textView_TerminationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_date_yet"
            android:textSize="20sp" />

        <Button
            android:id="@+id/TerminationDateButton"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:onClick="DateTerminationOnClick"
            android:text="@string/set_termination_date" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radioGroup_state"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioButton_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/radioButton_undefined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/undefined" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/DetectionLocation_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DetectionDate_Layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_DetectionLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detection_location"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_DetectionLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="LabelFor" />
    </LinearLayout>

</RelativeLayout>