<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <pl.droidsonroids.gif.GifTextView
        android:id="@+id/bluetooth_gif"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_ZVK"
        android:layout_alignParentStart="true"
        android:drawableStart="@drawable/bluetooth"
        android:drawableTop="@drawable/bluetooth"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_ZVK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/button_bluetooth"
        android:onClick="buttonZVKOnClick"
        android:text="@string/button_zvk_start"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="buttonBluetoothOnClick"
        android:text="@string/receive_id"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView_Info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/button_ZVK"
        android:textSize="24sp"
        android:visibility="invisible" />

    <pt.ipleiria.zombienomicon.Model.CameraSourcePreview
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:visibility="invisible">

        <pt.ipleiria.zombienomicon.Model.GraphicOverlay
            android:id="@+id/faceOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </pt.ipleiria.zombienomicon.Model.CameraSourcePreview>

    <TextView
        android:id="@+id/textView_Timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="43dp"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <Button
        android:id="@+id/Start"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/bluetooth_gif"
        android:onClick="buttonStartOnClick"
        android:text="@string/start"
        android:visibility="invisible" />


    <ImageButton
        android:id="@+id/Button_Sword"
        android:layout_width="180dp"
        android:layout_height="170dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/sword"
        android:contentDescription="@string/select_sword"
        android:onClick="buttonSwordOnClick"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/Button_Lightsaber"
        android:layout_width="180dp"
        android:layout_height="170dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:background="@drawable/light_saber"
        android:contentDescription="@string/select_lightsaber"
        android:onClick="buttonLightsaberOnClick"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/Button_Revolver"
        android:layout_width="180dp"
        android:layout_height="170dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Button_Sword"
        android:background="@drawable/revolver"
        android:contentDescription="@string/select_revolver"
        android:onClick="buttonRevolverOnClick"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/Button_Fist"
        android:layout_width="180dp"
        android:layout_height="170dp"
        android:layout_alignBottom="@+id/Button_RollingPin"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Button_Revolver"
        android:background="@drawable/fist"
        android:contentDescription="@string/select_fist"
        android:onClick="buttonFistOnClick"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/Button_Whip"
        android:layout_width="180dp"
        android:layout_height="170dp"
        android:layout_alignStart="@+id/Button_Lightsaber"
        android:layout_below="@+id/Button_Lightsaber"
        android:background="@drawable/whip"
        android:contentDescription="@string/select_whip"
        android:onClick="buttonWhipOnClick"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/Button_RollingPin"
        android:layout_width="180dp"
        android:layout_height="170dp"
        android:layout_alignStart="@+id/Button_Whip"
        android:layout_below="@+id/Button_Whip"
        android:background="@drawable/rolling_pin"
        android:contentDescription="@string/select_rolling_pin"
        android:onClick="buttonRollingPinOnClick"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/weaponImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignBottom="@+id/Button_RollingPin"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/selected__weapon"
        android:visibility="invisible" />

</RelativeLayout>